# YouTube-RSS-Feed-Aggregator

./: .gitignore  Build a Complete End-to-End GenAI Project in 3 Hours.ttml  PROJECT_STRUCTURE.md  README.md  SYSTEM_DESIGN.md  YOUTUBE_USAGE.md  ai-news-aggregator-test.code-workspace  env.example  initial idea script.txt  main.py  pyproject.toml  test_youtube.py
.cache/: ingest_state.json
app/agent/: __init__.py  __main__.py  config.py  llm_client.py  summarize.py  system_prompt.py
app/daily/: __init__.py  __main__.py
app/db/: __init__.py  __main__.py  models.py  queries.py  session.py  store.py
app/digest/: __init__.py  __main__.py  build.py  config.py  mailer.py  no_updates.py
app/ingest/: __init__.py  backfill.py  config.py  ingest_state.py  runner.py  youtube.py
app/ingest/scrapers/: __init__.py  anthropic_news.py  cache.py  openai_news.py  substack.py  title_cleaner.py  youtube.py
config/: sources.example.yml
docker/: README.md  docker-compose.yml
docs/: WINDOWS_SCHEDULER.md
scripts/: run_daily_chain.ps1
