[project]
name = "ai-news-aggregator-test"
version = "0.1.0"
description = "AI News Aggregator with OpenAI summarization and email digests"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.1.0",
    "requests>=2.31.0",
    "feedparser>=6.0.10",
    "beautifulsoup4>=4.12.0",
    "python-dateutil>=2.8.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0.1",
    "openai>=1.12.0",
    "python-dotenv>=1.0.0",
    "youtube-transcript-api>=0.6.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
